member resolving
